# brain-template

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  setup.sh  uninstall.sh
.claude/: settings.local.json.template
.obsidian/: app.json
00-home/: index.md  top-of-mind.md
atlas/: projects.md  research.md  vault-information-arch.md
brain_ingest/: cli.py  extract.py  note.py  persist.py  transcribe.py
